// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag matches snapshot correctly 1`] = `
<div
  class="mc-c-eOocXO mc-c-eOocXO-bFdWuZ-size-md mc-c-eOocXO-jroqRg-color-primary"
>
  test
</div>
`;

exports[`tagGroup matches snapshot correctly 1`] = `
<div
  class="mc-c-eOocXO mc-c-eOocXO-gsTuFi-size-lg mc-c-eOocXO-jroqRg-color-primary"
>
  Abc
</div>
`;
